--- a/html/사무1_상세_사용자.html
+++ b/html/사무1_상세_사용자.html
@@ -875,10 +875,7 @@
         </div>        
         <!-- // 근거법령 -->
 
-        <div class="button__wrap justify-between pc-flex mt-64">
-            <button type="button" class="btn-gray-default">
-                <i></i> 승인취소
-            </button>
+        <div class="button__wrap flex-end pc-flex mt-64">
             <button type="button" class="btn-primary-default">
               <i></i> 확인
             </button>            
@@ -887,7 +884,7 @@
           <div class="foot_btn_area">
             <!-- <a href="#none" class="btn ico_check_01"><span>변경된<br>사무 확인</span></a> -->
             <a href="#none" class="btn btn_cancel bg-gray"><span>취소</span></a>            
-            <a href="#none" class="btn btn_cancel_approval"><span>승인취소</span></a>
+            <a href="#none" class="btn btn_primary-default"><span>확인</span></a>
           </div>
         </div>        
 
