--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@
 					<td class="tleft"></td><!-- 3depth -->
 					<td class="tleft"></td><!-- 4depth -->
 					<td class="tleft"></td><!-- 5depth -->
-					<td class="tleft"><a href="html/파일명.html" target="_blank">파일명.html</a></td><!-- 파일링크 -->
-					<td>박성광</td>
-					<td><span class=""></span></td>
+					<td class="tleft"><a href="html/법령_목록.html" target="_blank">법령_목록.html</a></td><!-- 파일링크 -->
+					<td>홍성호</td>
+					<td><span class="finish">완료</span></td>
 					<td><span style="color:tomato"></span></td>
 					<td class="tleft"></td>
 				</tr>
@@ -366,12 +366,12 @@
 					<td class="no num"></td><!-- no -->
 					<td class="tleft"></td><!-- 1depth -->
 					<td class="tleft"></td><!-- 2depth -->
-					<td class="tleft">법령 상세</td><!-- 3depth -->
+					<td class="tleft">법령 상세(법령개정이력팝업포)</td><!-- 3depth -->
 					<td class="tleft"></td><!-- 4depth -->
 					<td class="tleft"></td><!-- 5depth -->
-					<td class="tleft"><a href="html/파일명.html" target="_blank">파일명.html</a></td><!-- 파일링크 -->
-					<td>박성광</td>
-					<td><span class=""></span></td>
+					<td class="tleft"><a href="html/법령상세.html" target="_blank">법령상세.html</a></td><!-- 파일링크 -->
+					<td>홍성호</td>
+					<td><span class="finish">완료</span></td>
 					<td><span style="color:tomato"></span></td>
 					<td class="tleft"></td>
 				</tr>
@@ -424,11 +424,76 @@
 					<td class="tleft"></td><!-- 4depth -->
 					<td class="tleft"></td><!-- 5depth -->
 					<td class="tleft"><a href="html/조사상세.html" target="_blank">조사상세.html</a></td><!-- 파일링크 -->
-					<td>박성광</td>
-					<td><span class=""><span class="ing">진행</span></span></td>
+					<td>홍성호</td>
+					<td><span class=""><span class="finish">완료</span></span></td>
 					<td><span style="color:tomato"></span></td>
 					<td class="tleft"></td>
 				</tr>
+				<tr class="sqnc">
+					<td class="no num"></td><!-- no -->
+					<td class="tleft"></td><!-- 1depth -->
+					<td class="tleft"></td><!-- 2depth -->
+					<td class="tleft">조사상세 승인요청관리자</td><!-- 3depth -->
+					<td class="tleft"></td><!-- 4depth -->
+					<td class="tleft"></td><!-- 5depth -->
+					<td class="tleft"><a href="html/조사상세_승인요청관리자.html" target="_blank">조사상세_승인요청관리자.html</a></td><!-- 파일링크 -->
+					<td>홍성호</td>
+					<td><span class=""><span class="finish">완료</span></span></td>
+					<td><span style="color:tomato"></span></td>
+					<td class="tleft"></td>
+				</tr>		
+				<tr class="sqnc">
+					<td class="no num"></td><!-- no -->
+					<td class="tleft"></td><!-- 1depth -->
+					<td class="tleft"></td><!-- 2depth -->
+					<td class="tleft">조사상세 반려작성자</td><!-- 3depth -->
+					<td class="tleft"></td><!-- 4depth -->
+					<td class="tleft"></td><!-- 5depth -->
+					<td class="tleft"><a href="html/조사상세_반려작성자.html" target="_blank">조사상세_반려작성자.html</a></td><!-- 파일링크 -->
+					<td>홍성호</td>
+					<td><span class=""><span class="finish">완료</span></span></td>
+					<td><span style="color:tomato"></span></td>
+					<td class="tleft"></td>
+				</tr>
+				<tr class="sqnc">
+					<td class="no num"></td><!-- no -->
+					<td class="tleft"></td><!-- 1depth -->
+					<td class="tleft"></td><!-- 2depth -->
+					<td class="tleft">조사상세 법령변경관리자</td><!-- 3depth -->
+					<td class="tleft"></td><!-- 4depth -->
+					<td class="tleft"></td><!-- 5depth -->
+					<td class="tleft"><a href="html/조사_상세_조사법령변경관리자.html" target="_blank">조사_상세_조사법령변경관리자.html</a></td><!-- 파일링크 -->
+					<td>홍성호</td>
+					<td><span class=""><span class="finish">완료</span></span></td>
+					<td><span style="color:tomato"></span></td>
+					<td class="tleft"></td>
+				</tr>	
+				<tr class="sqnc">
+					<td class="no num"></td><!-- no -->
+					<td class="tleft"></td><!-- 1depth -->
+					<td class="tleft"></td><!-- 2depth -->
+					<td class="tleft">조사상세 법령변경사용자</td><!-- 3depth -->
+					<td class="tleft"></td><!-- 4depth -->
+					<td class="tleft"></td><!-- 5depth -->
+					<td class="tleft"><a href="html/조사_상세_조사법령변경사용자.html" target="_blank">조사_상세_조사법령변경사용자.html</a></td><!-- 파일링크 -->
+					<td>홍성호</td>
+					<td><span class=""><span class="finish">완료</span></span></td>
+					<td><span style="color:tomato"></span></td>
+					<td class="tleft"></td>
+				</tr>				
+				<tr class="sqnc">
+					<td class="no num"></td><!-- no -->
+					<td class="tleft"></td><!-- 1depth -->
+					<td class="tleft"></td><!-- 2depth -->
+					<td class="tleft">조사상세 법령여러개일경우</td><!-- 3depth -->
+					<td class="tleft"></td><!-- 4depth -->
+					<td class="tleft"></td><!-- 5depth -->
+					<td class="tleft"><a href="html/조사_상세_법령여러개일경우.html" target="_blank">조사_상세_법령여러개일경우.html</a></td><!-- 파일링크 -->
+					<td>홍성호</td>
+					<td><span class=""><span class="finish">완료</span></span></td>
+					<td><span style="color:tomato"></span></td>
+					<td class="tleft"></td>
+				</tr>													
 				<tr class="sqnc">
 					<td class="no num"></td><!-- no -->
 					<td class="tleft"></td><!-- 1depth -->
@@ -490,9 +555,9 @@
 					<td class="tleft"></td><!-- 3depth -->
 					<td class="tleft"></td><!-- 4depth -->
 					<td class="tleft"></td><!-- 5depth -->
-					<td class="tleft"><a href="html/파일명.html" target="_blank">파일명.html</a></td><!-- 파일링크 -->
-					<td>박성광</td>
-					<td><span class=""></span></td>
+					<td class="tleft"><a href="html/사무1_리스트.html" target="_blank">사무1_리스트.html</a></td><!-- 파일링크 -->
+					<td>홍성호</td>
+					<td><span class="finish">완료</span></td>
 					<td><span style="color:tomato"></span></td>
 					<td class="tleft"></td>
 				</tr>
@@ -500,15 +565,28 @@
 					<td class="no num"></td><!-- no -->
 					<td class="tleft"></td><!-- 1depth -->
 					<td class="tleft"></td><!-- 2depth -->
-					<td class="tleft">사무 상세</td><!-- 3depth -->
+					<td class="tleft">사무 상세(관리자)</td><!-- 3depth -->
 					<td class="tleft"></td><!-- 4depth -->
 					<td class="tleft"></td><!-- 5depth -->
-					<td class="tleft"><a href="html/파일명.html" target="_blank">파일명.html</a></td><!-- 파일링크 -->
-					<td>박성광</td>
-					<td><span class=""></span></td>
+					<td class="tleft"><a href="html/사무1_상세_관리자.html" target="_blank">사무1_상세_관리자.html</a></td><!-- 파일링크 -->
+					<td>홍성호</td>
+					<td><span class="finish">완료</span></td>
 					<td><span style="color:tomato"></span></td>
-					<td class="tleft"></td>
+					<td class="tleft">법령개정이력 모달 포함</td>
 				</tr>
+				<tr class="sqnc">
+					<td class="no num"></td><!-- no -->
+					<td class="tleft"></td><!-- 1depth -->
+					<td class="tleft"></td><!-- 2depth -->
+					<td class="tleft">사무 상세(사용자)</td><!-- 3depth -->
+					<td class="tleft"></td><!-- 4depth -->
+					<td class="tleft"></td><!-- 5depth -->
+					<td class="tleft"><a href="html/사무1_상세_사용자.html" target="_blank">사무1_상세_사용자.html</a></td><!-- 파일링크 -->
+					<td>홍성호</td>
+					<td><span class="finish">완료</span></td>
+					<td><span style="color:tomato"></span></td>
+					<td class="tleft">법령개정이력 모달 포함</td>
+				</tr>				
 				<tr class="sqnc">
 					<td class="no num"></td><!-- no -->
 					<td class="tleft"></td><!-- 1depth -->
