--- a/html/조사상세_승인요청관리자.html
+++ b/html/조사상세_승인요청관리자.html
@@ -157,16 +157,12 @@
             <h3 class="document-title">사무정보</h3>
           </div>
           <div class="right_cont">            
-            <a href="#none" class="btn ico_check_02"><span>사무로 재요청</span></a>
-            <a href="#none" class="btn ico_check_03"><span>비사무로 재요청</span></a>
-            <a href="#none" class="btn ico_check_06"><span>자동생성 재요청</span></a>
+            <a href="#none" class="btn ico_pencil"  onclick="modalControl('o','#main_layer_pop2');return false"><span>이력확인</span></a> 
           </div>
         </div>
         <div class="top_info_box mo">
-          <div class="btn_cont row03">
-            <span><a href="#none" class="btn type03 ico_check_06"><span>생성 재요청</span></a></span>
-            <span><a href="#none" class="btn type03 ico_check_02"><span>사무로 재요청</span></a></span>
-            <span><a href="#none" class="btn type03 ico_check_03"><span>비사무로<br>재요청</span></a></span>
+          <div class="btn_cont row03">            
+            <span class="float-r"><a href="#none" class="btn type03 ico_penci-bl"   onclick="modalControl('o','#main_layer_pop2');return false"><span>이력확인</span></a></span>
           </div>
           <div class="left_cont mt-32">
             <h3 class="document-title">사무정보</h3>
@@ -403,6 +399,77 @@
             </tbody>
           </table>
         </div>
+        <div class="table_cont pc">
+            <table class="table-body-only confirm-table">
+                <colgroup>
+                    <col width="160" />
+                    <col width="160" />
+                    <col width="" />
+                    <col width="160" />
+                    <col width="" />
+                    <col width="160" />                    
+                    <col width="" />
+                </colgroup>
+                <tbody>             
+                    <tr>
+                        <th class="title-cell">승인요청자</th>
+                        <th>소속</th>
+                        <td>
+                          <div class="form-element__wrap">                                
+                              <span class="form-element__inner input-type">
+                                  <input type="text" value="소속" class="input-type1-font14" placeholder="소속" title="소속 ">
+                              </span>
+                          </div>                             
+                        </td>
+                        <th>이름</th>
+                        <td>
+                          <div class="form-element__wrap">                                
+                              <span class="form-element__inner input-type">
+                                  <input type="text" value="이름" class="input-type1-font14" placeholder="이름" title="이름 ">
+                              </span>
+                          </div>                            
+                        </td>
+                        <th>요청날짜</th>
+                        <td>
+                          <div class="form-element__wrap">                                
+                              <span class="form-element__inner input-type">
+                                  <input type="text" value="2024.07.15" class="input-type1-font14" placeholder="요청날짜" title="요청날짜 ">
+                              </span>
+                          </div>                           
+                        </td>                                                
+                    </tr>      
+                    <tr>
+                        <th class="title-cell">승인자</th>
+                        <th>소속</th>
+                        <td>
+                          <div class="form-element__wrap">                                
+                              <span class="form-element__inner input-type">
+                                  <input type="text" value="소속" class="input-type1-font14" placeholder="소속" title="소속 ">
+                              </span>
+                          </div>                             
+                        </td>
+                        <th>이름</th>
+                        <td>
+                          <div class="form-element__wrap">                                
+                              <span class="form-element__inner input-type">
+                                  <input type="text" value="이름" class="input-type1-font14" placeholder="이름" title="이름 ">
+                              </span>
+                          </div>                            
+                        </td>
+                        <th>승인날짜</th>
+                        <td>
+                          <div class="form-element__wrap">                                
+                              <span class="form-element__inner input-type">
+                                  <input type="text" value="2024.07.15" class="input-type1-font14" placeholder="승인날짜" title="승인날짜 ">
+                              </span>
+                          </div>                           
+                        </td>                                                
+                    </tr>                    
+                </tbody>
+            </table>
+        </div>
+
+
         <div class="top_info_box pc mt-64">
           <div class="left_cont">
             <h3 class="document-title">근거법령 정보</h3>
@@ -538,7 +605,7 @@
                   </td>                
               </tr>
               <tr>
-                  <th scope="row">사무구분</th>
+                  <th scope="row">사무 검토 상태</th>
                   <td>
                     <!-- 콤보박스 -->
                     <div class="select_box full">
@@ -770,114 +837,198 @@
             </tbody>
           </table>
         </div>
-        <div class="top_info_box mo mt-64">
-          <div class="left_cont">
-            <h3 class="document-title">근거법령 정보</h3>
-          </div>
-        </div>
         <div class="table_cont mo">
-          <table class="table-body-only  no-line-type">
-            <colgroup>
-              <col width="30%" />
-              <col width="" />
-            </colgroup>
-            <tbody>
-              <tr>
-                <th scope="row">법령명</th>
-                <td>
-                    <div class="form-element__wrap">                                
-                        <span class="form-element__inner input-type">
-                            <input type="text" value="농지법" class="input-type1-font14" placeholder="법령명" disabled title="법령명">
-                        </span>
-                    </div>                            
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">법 분야</th>
-                <td>
-                    <div class="form-element__wrap multiline">                                
-                      <span class="form-element__inner input-type">
-                        <input type="text" value="" class="input-type1-font14" placeholder="편 - 장 - 절 - 편" title="법 분야1">
-                      </span>
-                    </div>                          
-                </td> 
-              </tr>
-              <tr>
-                <th scope="row">소관부처</th>
-                <td>
-                  <!-- 콤보박스 -->
-                  <div class="select_box full">
-                      <span class="select">소관부처</span>
-                      <div class="option">
-                        <div class="mCustomScrollbar _mCS_5 mCS-autoHide mCS_no_scrollbar" data-mcs-theme="minimal-dark" style="overflow: visible; height: 100px; position: relative;">
-                          <div id="mCSB_5" class="mCustomScrollBox mCS-minimal-dark mCSB_vertical mCSB_outside" style="max-height: none;" tabindex="0">
-                            <div class="mCSB_container mCS_y_hidden mCS_no_scrollbar_y" style="position:relative; top:0; left:0;" dir="ltr">
-                                <ul>
-                                    <li>사무</li>
-                                    <li>선택함2</li>
-                                    <li>선택함3</li>
-                                </ul>
-                            </div>
-                        </div>
-                      </div>
-                    </div>  
-                  </div>
-                  <!-- //콤보박스 -->
-                </td>
-              </tr>
-            </tbody>
+          <table class="table-body-only confirm-table">
+              <colgroup>                  
+                  <col width="110" />
+                  <col width="" />
+              </colgroup>
+              <tbody>             
+                  <tr>
+                      <th class="title-cell" colspan="2">승인요청자</th>
+                  </tr>
+                  <tr>
+                      <th>소속</th>
+                      <td>
+                        <div class="form-element__wrap">                                
+                            <span class="form-element__inner input-type">
+                                <input type="text" value="소속" class="input-type1-font14" placeholder="소속" title="소속 ">
+                            </span>
+                        </div>                             
+                      </td>
+                    </tr>
+                    <tr>
+                      <th>이름</th>
+                      <td>
+                        <div class="form-element__wrap">                                
+                            <span class="form-element__inner input-type">
+                                <input type="text" value="이름" class="input-type1-font14" placeholder="이름" title="이름 ">
+                            </span>
+                        </div>                            
+                      </td>
+                    </tr>  
+                    <tr>
+                      <th class="last">요청날짜</th>
+                      <td class="last">
+                        <div class="form-element__wrap">                                
+                            <span class="form-element__inner input-type">
+                                <input type="text" value="2024.07.15" class="input-type1-font14" placeholder="요청날짜" title="요청날짜 ">
+                            </span>
+                        </div>                           
+                      </td>                                                
+                  </tr>      
+                  <tr>
+                      <th class="title-cell" colspan="2">승인자</th>
+                  </tr>   
+                  <tr>
+                      <th>소속</th>
+                      <td>
+                        <div class="form-element__wrap">                                
+                            <span class="form-element__inner input-type">
+                                <input type="text" value="소속" class="input-type1-font14" placeholder="소속" title="소속 ">
+                            </span>
+                        </div>                             
+                      </td>
+                    </tr>
+                    <tr>
+                      <th>이름</th>
+                      <td>
+                        <div class="form-element__wrap">                                
+                            <span class="form-element__inner input-type">
+                                <input type="text" value="이름" class="input-type1-font14" placeholder="이름"  title="이름 ">
+                            </span>
+                        </div>                            
+                      </td>
+                    </tr>
+                    <tr>  
+                      <th class="last">승인날짜</th>
+                      <td class="last">
+                        <div class="form-element__wrap">                                
+                            <span class="form-element__inner input-type">
+                                <input type="text" value="2024.07.15" class="input-type1-font14" placeholder="승인날짜"  title="승인날짜 ">
+                            </span>
+                        </div>                           
+                      </td>                                                
+                  </tr>                    
+              </tbody>
           </table>
-        </div>
+      </div>
 
-        <div class="document-title-area mt-16">
-            <div class="document-title-h16">
-                법령분류
-            </div>
-            <button type="button" class="btn-gra-sm" onclick="modalControl('o','#main_layer_pop');return false">근거법령 전체보기</button>
+      <div class="top_info_box mo mt-64">
+        <div class="left_cont">
+          <h3 class="document-title">근거법령 정보</h3>
         </div>
-        <div class="table_cont rount-type-sm mo mt-8">
-          <table class="table-body-only">
-            <colgroup>
-              <col width="30%" />
-              <col width="" />
-            </colgroup>
-            <tbody>
-              <tr>            
-                  <th scope="row">구분</th>
-                  <td class="notice-text">개정 2024.01.08</td>
-              </tr>       
-              <tr>            
-                  <th scope="row">법령명</th>
-                  <td>농지법</td>
-              </tr>                      
-              <tr>            
-                  <th scope="row">대분류/장</th>
-                  <td>4장 농지의보존등</td>
-              </tr>
-              <tr>
-                  <th scope="row">중분류/조</th>
-                  <td>1절 농업진흥지역의 지정</td>
-              </tr>
-              <tr>
-                  <th scope="row">소분류/항</th>
-                  <td>31조 농업진흥지역변경</td>
-              </tr>
-              <tr>
-                  <th scope="row">조문제목</th>
-                  <td>31조 농업진흥지역변경</td>
-              </tr>       
-              <tr>
-                  <th scope="row" class="color-light">조문내용</th>
-                  <td class="color-light">① 시ㆍ도지사는 대통령령으로 정하는 사유가 있으면 농업진흥지역 또는 용도구역을 변경하거나 해제할 수 있다.  다만, 그 사유가 없어진 경우에는 원래의 농업진흥지역 또는 용도구역으로 환원하여야 한다.<개정 2018. 12. 24.></td>
-              </tr>                  
-            </tbody>
-          </table>  
-        </div>
+      </div>
+      <div class="table_cont mo">
+        <table class="table-body-only  no-line-type">
+          <colgroup>
+            <col width="30%" />
+            <col width="" />
+          </colgroup>
+          <tbody>
+            <tr>
+              <th scope="row">법령명</th>
+              <td>
+                  <div class="form-element__wrap">                                
+                      <span class="form-element__inner input-type">
+                          <input type="text" value="농지법" class="input-type1-font14" placeholder="법령명" disabled title="법령명">
+                      </span>
+                  </div>                            
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">법 분야</th>
+              <td>
+                  <div class="form-element__wrap multiline">                                
+                    <span class="form-element__inner input-type">
+                      <input type="text" value="" class="input-type1-font14" placeholder="편 - 장 - 절 - 편" title="법 분야1">
+                    </span>
+                  </div>                          
+              </td> 
+            </tr>
+            <tr>
+              <th scope="row">소관부처</th>
+              <td>
+                <!-- 콤보박스 -->
+                <div class="select_box full">
+                    <span class="select">소관부처</span>
+                    <div class="option">
+                      <div class="mCustomScrollbar _mCS_5 mCS-autoHide mCS_no_scrollbar" data-mcs-theme="minimal-dark" style="overflow: visible; height: 100px; position: relative;">
+                        <div id="mCSB_5" class="mCustomScrollBox mCS-minimal-dark mCSB_vertical mCSB_outside" style="max-height: none;" tabindex="0">
+                          <div class="mCSB_container mCS_y_hidden mCS_no_scrollbar_y" style="position:relative; top:0; left:0;" dir="ltr">
+                              <ul>
+                                  <li>사무</li>
+                                  <li>선택함2</li>
+                                  <li>선택함3</li>
+                              </ul>
+                          </div>
+                      </div>
+                    </div>
+                  </div>  
+                </div>
+                <!-- //콤보박스 -->
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-        <div class="btn_area txt_align_right pc">
-          <button class="btn btn_cancel"><span>취소</span></button>
-          <button class="btn btn_save"><span>저장</span></button>
-          <button class="btn btn_approval"><span>승인요청</span></button>
+      <div class="document-title-area mt-16">
+          <div class="document-title-h16">
+              법령분류
+          </div>
+          <button type="button" class="btn-gra-sm" onclick="modalControl('o','#main_layer_pop');return false">근거법령 전체보기</button>
+      </div>
+      <div class="table_cont rount-type-sm mo mt-8">
+        <table class="table-body-only">
+          <colgroup>
+            <col width="30%" />
+            <col width="" />
+          </colgroup>
+          <tbody>
+            <tr>            
+                <th scope="row">구분</th>
+                <td class="notice-text">개정 2024.01.08</td>
+            </tr>       
+            <tr>            
+                <th scope="row">법령명</th>
+                <td>농지법</td>
+            </tr>                      
+            <tr>            
+                <th scope="row">대분류/장</th>
+                <td>4장 농지의보존등</td>
+            </tr>
+            <tr>
+                <th scope="row">중분류/조</th>
+                <td>1절 농업진흥지역의 지정</td>
+            </tr>
+            <tr>
+                <th scope="row">소분류/항</th>
+                <td>31조 농업진흥지역변경</td>
+            </tr>
+            <tr>
+                <th scope="row">조문제목</th>
+                <td>31조 농업진흥지역변경</td>
+            </tr>       
+            <tr>
+                <th scope="row" class="color-light">조문내용</th>
+                <td class="color-light">① 시ㆍ도지사는 대통령령으로 정하는 사유가 있으면 농업진흥지역 또는 용도구역을 변경하거나 해제할 수 있다.  다만, 그 사유가 없어진 경우에는 원래의 농업진흥지역 또는 용도구역으로 환원하여야 한다.<개정 2018. 12. 24.></td>
+            </tr>                  
+          </tbody>
+        </table>  
+      </div>
+
+
+        <div class="button__wrap flex-end pc-flex mt-64">
+            <button type="button" class="btn-gray-default">
+                <i class="ico-remove"></i> 취소
+            </button>
+            <button type="button" class="btn-primary-default">
+                <i></i> 승인
+            </button>         
+            <button type="button" class="btn-line-return">
+                <i></i> 반려
+            </button>                     
         </div>
 
         <!-- 모달 -->
