--- a/html/사무1_리스트.html
+++ b/html/사무1_리스트.html
@@ -149,8 +149,7 @@
         <!-- table -->
         <div class="table_cont">
           <table>
-            <colgroup>
-              <!-- <col style="width:5%;"> -->  
+            <colgroup>              
               <col style="width:6%;">
               <col style="width:6%;">
               <col style="width:6%;">
@@ -169,11 +168,9 @@
               <col style="width:6%;">
               <col style="width:6%;">
               <col style="width:6%;">
-              <!-- <col style="width:6%;"> -->
             </colgroup>
             <thead>
-              <tr>
-                <!-- <th rowspan="3">선택</th> -->
+              <tr>                
                 <th rowspan="3">소관부처</th>
                 <th rowspan="3">법 분야</th>
                 <th rowspan="3">법령명</th>
@@ -185,8 +182,7 @@
                 <th rowspan="3">세부사무<br>유형</th>
                 <th rowspan="3">위임사무<br>여부</th>
                 <th rowspan="3">세부사무<br>유형</th>
-                <th rowspan="3">위임사무<br>여부</th>
-                <!-- <th rowspan="3">검토</th> -->
+                <th rowspan="3">위임사무<br>여부</th>                
               </tr>
               <tr class="color_gray">
                 <th colspan="2">대분류</th>
@@ -204,12 +200,6 @@
             </thead>
             <tbody>
               <tr>
-                <!-- <td>
-                  <label class="input_type check only">
-                    <input type="checkbox" name="q01">
-                    <span class="txt"></span>
-                  </label>
-                </td> -->
                 <td>농림축산부</td>
                 <td>24농업 농지</td>
                 <td>농지보호법</td>
@@ -229,15 +219,8 @@
                 <td>X</td>
                 <td>X</td>
                 <td>X</td>
-                <!-- <td>대기중</td> -->
               </tr>
               <tr>
-                <!-- <td>
-                  <label class="input_type check only">
-                    <input type="checkbox" name="q01">
-                    <span class="txt"></span>
-                  </label>
-                </td> -->
                 <td>농림축산부</td>
                 <td>24농업 농지</td>
                 <td>농지보호법</td>
@@ -257,15 +240,8 @@
                 <td>X</td>
                 <td>X</td>
                 <td>X</td>
-                <!-- <td>대기중</td> -->
               </tr>
               <tr>
-                <!-- <td>
-                  <label class="input_type check only">
-                    <input type="checkbox" name="q01">
-                    <span class="txt"></span>
-                  </label>
-                </td> -->
                 <td>농림축산부</td>
                 <td>24농업 농지</td>
                 <td>농지보호법</td>
@@ -285,15 +261,8 @@
                 <td>X</td>
                 <td>X</td>
                 <td>X</td>
-                <!-- <td>대기중</td> -->
               </tr>
               <tr class="change">
-                <!-- <td>
-                  <label class="input_type check only">
-                    <input type="checkbox" name="q01">
-                    <span class="txt"></span>
-                  </label>
-                </td> -->
                 <td>농림축산부</td>
                 <td>24농업 농지</td>
                 <td>농지보호법</td>
@@ -313,8 +282,70 @@
                 <td>X</td>
                 <td>X</td>
                 <td>X</td>
-                <!-- <td>대기중</td> -->
               </tr>
+              <tr>
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+              </tr>
+              <tr>
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+              </tr>
+              <tr>
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+              </tr>              
             </tbody>
           </table>
         </div>
