--- a/html/사무1_상세_사용자.html
+++ b/html/사무1_상세_사용자.html
@@ -83,6 +83,9 @@
           <div class="left_cont">
             <h3 class="document-title">사무정보</h3>
           </div>
+          <div class="btn_cont">            
+            <span class="float-r"><a href="#none" class="btn type03 ico_penci-bl" onclick="modalControl('o','#main_layer_pop2');return false"><span>이력확인</span></a></span>
+          </div>          
         </div>
         <div class="table_cont pc">
             <table class="table-body-only">
@@ -316,7 +319,7 @@
         </div>
         <!-- mo -->
         <div class="table_cont mo">
-          <table class="table-body-only">
+          <table class="table-body-only  no-line-type">
             <colgroup>
               <col width="30%" />
               <col width="" />
@@ -759,13 +762,13 @@
             </table>
         </div>
 
-        <div class="top_info_box mo mt-32">
+        <div class="top_info_box mo mt-64">
           <div class="left_cont">
             <h3 class="document-title">근거법령 정보</h3>
           </div>
         </div>
         <div class="table_cont mo">
-          <table class="table-body-only">
+          <table class="table-body-only  no-line-type">
             <colgroup>
               <col width="30%" />
               <col width="" />
@@ -814,65 +817,54 @@
                   <!-- //콤보박스 -->
                 </td>
               </tr>
-              <tr>
-                  <th scope="row" colspan="2">법령분류</th>              
-              </tr>
-              <tr>
-                <td colspan="2" class="inner-table">
-                  <div class="inner-table-cont">
-                    <table class="tb_fixed">
-                        <colgroup>
-                            <col width="20%" />
-                            <col width="20%" />
-                            <col width="20%" />
-                            <col width="20%" />                               
-                            <col width="20%" />
-                        </colgroup>
-                        <tbody>
-                          <tr>
-                              <td class="tit">대분류</td>
-                              <td class="tit">중분류</td>
-                              <td class="tit">소분류</td>
-                              <td class="tit">세분류</td>
-                              <td rowspan="2" class="no-line">호</td>
-                          </tr>
-                            <tr>
-                                <td>4장 농지의보존등</td>
-                                <td>1절 농업진흥지역의 지정</td>
-                                <td>31조 농업진흥지역변경</td>
-                                <td>행</td>                                      
-                            </tr>
-                        </tbody>
-                    </table>
-                  </div>
-                  <div class="button__wrap flex-end mt-16">
-                    <button type="button" class="btn-gra-sm" onclick="modalControl('o','#main_layer_pop');return false">근거법령 전체보기</button>
-                  </div>
-                  <div class="inner-table-cont mt-16">
-                    <table>
-                        <colgroup>
-                            <col width="20%" />
-                            <col width="" />
-                        </colgroup>
-                        <tbody>
-                          <tr>
-                              <td class="tit">조문제목</td>
-                              <td class="tit text-l" colspan="2">농업진흥지역등의 변경 및 해제</td>
-                          </tr>
-                            <tr>
-                                <td>조문내용</td>
-                                <td class="text-l">
-                                  ① 시ㆍ도지사는 대통령령으로 정하는 사유가 있으면 농업진흥지역 또는 용도구역을 변경하거나 해제할 수 있다. 다만, 그 사유가 없어진 경우에는 원래의 농업진흥지역 또는 용도구역으로 환원하여야 한다.<개정 2018. 12. 24.>
-                                </td>                                 
-                            </tr>
-                        </tbody>
-                    </table>
-                  </div>
-                </td>              
-              </tr>                    
             </tbody>
           </table>
-        </div>        
+        </div>
+
+        <div class="document-title-area mt-16">
+            <div class="document-title-h16">
+                법령분류
+            </div>
+            <button type="button" class="btn-gra-sm" onclick="modalControl('o','#main_layer_pop');return false">근거법령 전체보기</button>
+        </div>
+        <div class="table_cont rount-type-sm mo mt-8">
+          <table class="table-body-only">
+            <colgroup>
+              <col width="30%" />
+              <col width="" />
+            </colgroup>
+            <tbody>
+              <tr>            
+                  <th scope="row">구분</th>
+                  <td class="notice-text">개정 2024.01.08</td>
+              </tr>       
+              <tr>            
+                  <th scope="row">법령명</th>
+                  <td>농지법</td>
+              </tr>                      
+              <tr>            
+                  <th scope="row">대분류/장</th>
+                  <td>4장 농지의보존등</td>
+              </tr>
+              <tr>
+                  <th scope="row">중분류/조</th>
+                  <td>1절 농업진흥지역의 지정</td>
+              </tr>
+              <tr>
+                  <th scope="row">소분류/항</th>
+                  <td>31조 농업진흥지역변경</td>
+              </tr>
+              <tr>
+                  <th scope="row">조문제목</th>
+                  <td>31조 농업진흥지역변경</td>
+              </tr>       
+              <tr>
+                  <th scope="row" class="color-light">조문내용</th>
+                  <td class="color-light">① 시ㆍ도지사는 대통령령으로 정하는 사유가 있으면 농업진흥지역 또는 용도구역을 변경하거나 해제할 수 있다.  다만, 그 사유가 없어진 경우에는 원래의 농업진흥지역 또는 용도구역으로 환원하여야 한다.<개정 2018. 12. 24.></td>
+              </tr>                  
+            </tbody>
+          </table>  
+        </div>  
         <!-- // 근거법령 -->
 
         <div class="button__wrap flex-end pc-flex mt-64">
