--- a/html/조사_상세_법령여러개일경우.html
+++ b/html/조사_상세_법령여러개일경우.html
@@ -161,7 +161,7 @@
           </div>
         </div>
         <div class="top_info_box mo">
-          <div class="btn_cont row03">            
+          <div class="btn_cont">            
             <span class="float-r"><a href="#none" class="btn type03 ico_penci-bl"   onclick="modalControl('o','#main_layer_pop2');return false"><span>이력확인</span></a></span>
           </div>
           <div class="left_cont mt-32">
